name:                chan-perf
version:             0.1.0.0
synopsis:            Channel Performance Evaluation
description:         Channel Performance Evaluation
homepage:            http://github.com/swift-nav/chan-perf
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable chan-perf
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       async
                     , base
                     , basic-prelude
                     , binary-conduit
                     , conduit
                     , conduit-extra
                     , resourcet
                     , safe
                     , sbp
                     , stm
                     , stm-conduit
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
