name:                skylark-perf
version:             0.1.0.0
synopsis:            Skylark Performance Evaluation
description:         Skylark Performance Evaluation
homepage:            http://github.com/githubuser/simple#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable skylark-perf
  main-is:             main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       async
                     , base
                     , basic-prelude
                     , binary-conduit
                     , conduit
                     , conduit-extra
                     , resourcet
                     , safe
                     , sbp
                     , stm
                     , stm-conduit
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
